--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -44,15 +44,20 @@ h2.subheading {
 
 /* tablet stylings */
 @media (max-width: 1024px) {
-    .subheading {
+    .home-page-container .subheading {
         line-height: 1.5;
     }
 }
 
 /* mobile stylings */
 @media (max-width: 767px) {
-    .subheading {
+    .home-page-container .heading {
+        font-size: 2.5rem;
+    }
+
+    .home-page-container .subheading {
         margin-bottom: 2rem !important;
+        font-size: 1.7rem;
     }
 
     .home-container .polaroid-image {
@@ -71,7 +76,7 @@ h2.subheading {
     }
 
     .exclamation-lines-icon {
-        top: 10%;
+        top: 40px;
         left: 90%;
     }
 }
